Fix problem with resized Stack Overflow flair.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -37,3 +37,9 @@ article h1, h2, h3, h4, h5, h6 {
 h1.entry-title {
   font-weight: bold;
 }
+
+aside.sidebar img.stackoverflow {
+  border: none;
+  padding: 0.5em 0;
+  box-shadow: none;
+}
